--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,3 +20,18 @@ body {
   color: rgb(var(--foreground-rgb));
   background: #efefef
 }
+
+@keyframes animate-bg {
+  0% { background-color: red; }
+  14% { background-color: orange; }
+  28% { background-color: yellow; }
+  42% { background-color: green; }
+  57% { background-color: blue; }
+  71% { background-color: indigo; }
+  85% { background-color: purple; }
+  100% { background-color: red; }
+}
+
+.animate-bg-color {
+  animation: animate-bg 2s infinite;
+}
